--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,3 +1,33 @@
-#CSS{
-	
+/*CSS for body including header*/
+
+/**{
+	border: 1px solid black;
+}*/
+
+.header {
+	height: 120px;
+	border: 1px solid black;
+	margin-bottom: 10px;
+
+}
+
+.jumbotron {
+	height: 400px;
+}
+
+.thumbnail {
+	width: 178px;
+	height: 240px;
+	border: 2px solid black;
+}
+
+.tooltip {
+	display:none;
+	position:absolute;
+	border:1px solid #333;
+	background-color:#161616;
+	border-radius:5px;
+	padding:10px;
+	color:#fff;
+	font-size:12px Arial;
 }
