--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -35,6 +35,11 @@
 .hidden{
 	display: none;
 }
+#photo-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap:wrap;
+}
 
 .trigger{
 	text-align: center;
