--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -19,6 +19,11 @@
 	width: 178px;
 	height: 240px;
 	border: 2px solid black;
+	border-radius: 5px;
+	display: flex;
+  	justify-content: space-around;
+  	flex-wrap:wrap;
+  	padding: 0px;
 }
 
 .tooltip {
@@ -35,11 +40,11 @@
 .hidden{
 	display: none;
 }
-#photo-container {
+/*#photo-container {
   display: flex;
   justify-content: space-around;
   flex-wrap:wrap;
-}
+}*/
 
 .trigger{
 	text-align: center;
