--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -55,3 +55,30 @@
 .trigger a {
 	color: black;
 }
+
+.carousel-caption p {
+	color: black; 
+	font-size: 150%;
+}
+
+.carousel-caption h3 {
+	color:black;
+}
+
+./*hoverinfo {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  font-size: 28px;
+  color: #ffffff;
+  cursor: pointer;
+}
+.hoverinfo p {
+  display: none;
+  color: #000000;
+}
+.hoverinfo:hover p {
+  background-color: rgba(255, 255, 255, 0.7);
+  display: block;
+}*/
+
