--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -65,6 +65,15 @@
 	color:black;
 }
 
+
+.view{
+	width: 100px;
+	height:100px;
+	border: 1px solid black;
+	background-color: blue;
+	display:inline-block;
+}
+
 ./*hoverinfo {
   position: absolute;
   top: 15px;
