--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -80,17 +80,16 @@ h2{
 
 
 .view{
-<<<<<<< HEAD
 	width: 200px;
 	height:200px;
 	border: 1px solid black;
-	background-color: blue;
+	background-color: silver;
 	display: inline-block;
-=======
-	width: 250px;
+
+	/*width: 250px;
 	height:300px;
 	border: 3px solid black;
-	background-color: silver;
+	background-color: silver;*/
 }
 .containers{
 	margin-left: 80px;
@@ -100,7 +99,6 @@ h2{
 	color: white;
 	padding-right: 0 auto;
 	padding-left: 0 auto;
->>>>>>> c7ad15c5721699446e8b8c9437489f1ebc35c8d6
 }
 ./*hoverinfo {
   position: absolute;
