search and slider do not work

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -85,6 +85,7 @@ h2{
 	border: 1px solid black;
 	background-color: silver;
 	display: inline-block;
+	vertical-align: middle;
 
 	/*width: 250px;
 	height:300px;
@@ -117,3 +118,50 @@ h2{
   display: block;
 }*/
 
+/*begin slider */
+
+/*.slide-in-menu{
+	background-color: black;
+	color: white;
+	height: 100%;
+	width: 20%;
+	position: fixed;
+	top: 0;
+	display: inline-block;
+	padding-left: 3%;
+	padding-top: 1%;
+	z-index: 1;
+}
+
+#menu-trigger{
+	margin: 1%;
+	z-index: 1;
+}
+
+.white{
+	color: white;
+}
+
+.transparent{
+	background-color: transparent;
+}
+
+a {
+	color: white!important;
+}
+
+.red{
+	background-color: red;
+}
+
+.social{
+	border-radius: 50%;
+	width: 30%;
+	height: 15%;
+}
+
+.menu-footer{
+	margin-top: auto;
+}*/
+
+/*end slider*/
