--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -80,17 +80,17 @@ h2{
 
 
 .view{
-	width: 200px;
-	height:200px;
-	border: 1px solid black;
-	background-color: silver;
-	display: inline-block;
 
-	/*width: 250px;
-	height:300px;
-	border: 3px solid black;
-	background-color: silver;*/
+	width: 50px;
+	height:50px;
+	border: 1px solid black;
+	background-color: orange;
+	display: none;
 }
+
+img:hover +.view {
+	display: block;
+} 
 .containers{
 	margin-left: 80px;
 }
