--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -80,15 +80,13 @@ h2{
 
 
 .view{
-<<<<<<< HEAD
-=======
-	width: 200px;
+
+	/*width: 200px;
 	height:200px;
 	border: 1px solid black;
 	background-color: silver;
 	display: inline-block;
-	vertical-align: middle;
->>>>>>> 13f72e7655d74172abe3e5c330f8e997111a6545
+	vertical-align: middle;*/
 
 	width: 50px;
 	height:50px;
