--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -41,12 +41,13 @@ h2{
 .thumbnail {
 	width: 178px;
 	height: 240px;
-	border: 2px solid black;
-	border-radius: 5px;
-	display: flex;
+	border: 1px solid black;
+	border-radius: 1px;
+	display: inline-block;
   	justify-content: space-around;
   	flex-wrap:wrap;
-  	padding: 0px;
+  	margin-left: 5px;
+  	margin-bottom: 5px;
 }
 
 .tooltip {
