--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -14,6 +14,12 @@ body {
 	z-index: 9999;
 
 }
+:target:before {
+content:"";
+display:block;
+height:75px; /* fixed header height*/
+margin:-75px 0 0; /* negative fixed header height */
+}
 .container-fluid{
 	padding-left: 0px;
 	padding-right: 0px;
